[package]
authors = ["Twilight Contributors"]
edition = "2018"
name = "twilight-http-proxy"
version = "0.1.0"

[dependencies]
dashmap = "6"
futures-util = { version = "0.3", default-features = false }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-tokio", "http1", "http2", "aws-lc-rs"] }
hyper-hickory = { version = "0.8", features = ["tokio"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "http1", "http2"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.8", default-features = false, features = ["time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http-ratelimiting = { version = "0.16.0" }

# Only used by the `expose-metrics` feature.
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", default-features = false, optional = true }
metrics-util = { version = "0.20", optional = true }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["test-util"] }

[features]
expose-metrics = ["metrics", "metrics-exporter-prometheus", "metrics-util", "lazy_static"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
